<resources>
    <string name="app_name">SubBook</string>
    <string name="AddSubscription">New Subscription</string>
    <string name="Name">Name</string>
    <string name="Date">Date</string>
    <string name="StartDate">Date Started</string>
    <string name="Charge">Charge</string>
    <string name="MonthlyCharge">Monthly Charge</string>
    <string name="Comment">Comment</string>
</resources>
